fix-bug: add init asset to create